@@ -7,7 +7,6 @@ import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static asia.kala.collection.Assertions.*;
 
 public final class ImmutableListTest implements ImmutableSeqTestTemplate {
     @Override
@@ -17,7 +16,7 @@ public final class ImmutableListTest implements ImmutableSeqTestTemplate {
 
     @Test
     public final void ofTest() {
-        assertIsEmpty(ImmutableList.of());
+        assertIterableEquals(List.of(),ImmutableList.of());
         assertIterableEquals(List.of("str1"), ImmutableList.of("str1"));
         assertIterableEquals(List.of("str1", "str2"), ImmutableList.of("str1", "str2"));
         assertIterableEquals(List.of("str1", "str2", "str3"), ImmutableList.of("str1", "str2", "str3"));
